# smart_type

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GEMINI.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  install.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  release.yml
config/: 90-smarttype-user.conf.in  90-smarttype.conf  fcitx5-layout-sync.service  smarttype-tray.desktop  smarttype-tray.service.in
docs/: ARCHITECTURE.md  BACKLOG.md  DECISIONS.md  DISTRO_TEST_PLAN.md  INSTALL.md  MANUAL_TEST_SUITE.md  PRODUCT.md  RUNBOOK.md  ST-009_ANALYSIS.md  STATE.md  TEST_MATRIX.md  UI_SPEC.md
include/smarttype/: corrector.hpp  decision_log.hpp  fcitx_safety.hpp  personal_store.hpp  text.hpp  version.hpp.in
kwin/smarttype-position/: metadata.json
kwin/smarttype-position/contents/code/: main.js
scripts/: build-release-bundle.sh  configure-fcitx-gnome.py  configure-fcitx-profile.py  configure-fcitx-x11.py  doctor.sh  fcitx5-layout-sync.py  install-dependencies.sh  install-fedora.sh  install-release.sh  install-user.sh  patch-kimpanel.py  prepare-gnome-kimpanel.sh  uninstall-fedora.sh  uninstall-user.sh
src/cli/: control.cpp  eval.cpp
src/core/: corrector.cpp  decision_log.cpp  personal_store.cpp  text.cpp
src/fcitx/: CMakeLists.txt  smarttype-addon.conf.in  smarttype-us.conf  smarttype.conf  smarttype_engine.cpp
src/tray/: CMakeLists.txt  icons.qrc  issuereportdialog.cpp  issuereportdialog.hpp  main.cpp  settingsdialog.cpp  settingsdialog.hpp
src/ui/: CMakeLists.txt  blurcontroller.cpp  blurcontroller.hpp  main.cpp  renderer_main.cpp  rendererbridge.cpp  rendererbridge.hpp
src/ui/qml/: CandidateCapsule.qml  CandidatePanel.qml  Main.qml  Production.qml
src/ui/smarttypeui/: CMakeLists.txt  classicui.cpp  classicui.h  classicui_public.h  config.h.in  inputwindow.cpp  inputwindow.h  plasmathemewatchdog.cpp  plasmathemewatchdog.h  portalsettingmonitor.h  smarttypeui.conf.in.in  waylandcursor.cpp  waylandinputwindow.cpp  waylandshmwindow.cpp  waylandshmwindow.h  waylandui.cpp  waylandui.h  waylandwindow.cpp  waylandwindow.h  xcbmenu.cpp  xcbmenu.h  xcbui.cpp  xcbui.h
src/ui/smarttypeui/fcitx-utils/: event_p.h  uuid_p.h
tests/: configure_fcitx_gnome_tests.py  configure_fcitx_profile_tests.py  configure_fcitx_x11_tests.py  core_tests.cpp  fcitx_integration.cpp  install_dependency_tests.sh  install_release_tests.sh  layout_sync_tests.py  patch_kimpanel_tests.py  prebuilt_installer_tests.sh  release_bundle_tests.sh  runtime_dependency_resolution.sh  send_alt_shift.cpp  ui_addon_tests.cpp
tests/data/: baseline.tsv
tests/fcitx/: keyboard-us.conf  profile  testfrontend.conf
themes/smarttype-liquid-glass/: theme.conf
tools/: CMakeLists.txt
tools/theme-lab/: CMakeLists.txt  labrenderer.cpp  labrenderer.h  labtheme.cpp  labtheme.h  main.cpp  themelabwindow.cpp  themelabwindow.h  themepreviewwidget.cpp  themepreviewwidget.h
